--- a/src/animalList/AnimalList.fxml
+++ b/src/animalList/AnimalList.fxml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
@@ -9,7 +12,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.191" xmlns:fx="http://javafx.com/fxml/1" fx:controller="animalList.AnimalListController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="animalList.AnimalListController">
    <children>
       <TextField layoutX="27.0" layoutY="25.0" promptText="Search..." />
       <Button layoutX="224.0" layoutY="25.0" mnemonicParsing="false" text="Go" />
@@ -18,16 +21,15 @@
       <Button layoutX="264.0" layoutY="81.0" mnemonicParsing="false" text="Apply Filter" />
       <Pane layoutX="30.0" layoutY="128.0" prefHeight="217.0" prefWidth="541.0">
          <children>
-            <TableView layoutX="17.0" layoutY="14.0" prefHeight="200.0" prefWidth="508.0">
+            <TableView fx:id="animalsTableView" layoutX="17.0" layoutY="14.0" prefHeight="200.0" prefWidth="508.0">
               <columns>
-                <TableColumn prefWidth="75.0" text="Name" />
-                <TableColumn prefWidth="75.0" text="Species" />
-                  <TableColumn prefWidth="75.0" text="Breed" />
+                <TableColumn fx:id="nameColumn" prefWidth="161.0" text="Name" />
+                <TableColumn fx:id="speciesColumn" minWidth="0.0" prefWidth="182.0" text="Species" />
+                  <TableColumn fx:id="breedColumn" minWidth="0.0" prefWidth="163.0" text="Breed" />
               </columns>
             </TableView>
          </children>
       </Pane>
       <Button fx:id="returnToMain" layoutX="341.0" layoutY="25.0" mnemonicParsing="false" onAction="#goToMainMenu" text="Return to Main Menu" />
-      <Button fx:id="testSelectBtn" layoutX="418.0" layoutY="354.0" mnemonicParsing="false" onAction="#goToAnimalAdoption" text="Test select animal" />
    </children>
 </AnchorPane>
