--- a/src/employeedashboard/EmployeeDashboard.fxml
+++ b/src/employeedashboard/EmployeeDashboard.fxml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
@@ -18,9 +14,10 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<?import javafx.geometry.Insets?>
-
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="600.0" stylesheets="@../mainCSS.css" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="employeedashboard.EmployeeDashboardController">
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+  prefHeight="450.0" prefWidth="600.0" stylesheets="@../mainCSS.css" tabClosingPolicy="UNAVAILABLE"
+  xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
+  fx:controller="employeedashboard.EmployeeDashboardController">
   <tabs>
     <Tab text="Main">
       <content>
@@ -106,16 +103,50 @@
       <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
           <children>
-            <TabPane prefHeight="422.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE">
+            <TabPane prefHeight="420.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE">
               <tabs>
-                <Tab text="Untitled Tab 1">
+                <Tab text="Unprocessed">
                   <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                    <VBox prefHeight="200.0" prefWidth="100.0">
+                      <children>
+                        <ListView fx:id="unprocessedAdoptionsList" prefWidth="200.0">
+                          <VBox.margin>
+                            <Insets/>
+                          </VBox.margin>
+                        </ListView>
+                        <HBox alignment="CENTER_RIGHT" prefWidth="200.0">
+                          <children>
+                            <Button fx:id="adoptionUnprocessedRejectBtn" mnemonicParsing="false"
+                              onAction="#rejectAdoptionRequest" text="Reject">
+                              <HBox.margin>
+                                <Insets right="8.0"/>
+                              </HBox.margin>
+                            </Button>
+                            <Button fx:id="adoptionUnprocessedApproveBtn" mnemonicParsing="false"
+                              onAction="#approveAdoptionRequest" text="Approve">
+                              <HBox.margin>
+                                <Insets/>
+                              </HBox.margin>
+                            </Button>
+                          </children>
+                          <VBox.margin>
+                            <Insets/>
+                          </VBox.margin>
+                          <padding>
+                            <Insets bottom="16.0" right="8.0" top="8.0"/>
+                          </padding>
+                        </HBox>
+                      </children>
+                    </VBox>
                   </content>
                 </Tab>
-                <Tab text="Untitled Tab 2">
+                <Tab text="Processed">
                   <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                    <VBox prefHeight="200.0" prefWidth="100.0">
+                      <children>
+                        <ListView fx:id="processedAdoptionsList" prefWidth="200.0"/>
+                      </children>
+                    </VBox>
                   </content>
                 </Tab>
               </tabs>
