--- a/src/adoptionPage/AdoptionPage.fxml
+++ b/src/adoptionPage/AdoptionPage.fxml
@@ -11,7 +11,7 @@
 
 <AnchorPane prefHeight="429.0" prefWidth="326.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="adoptionPage.AdoptionPageController">
    <children>
-      <Button fx:id="returnBtn" layoutX="97.0" layoutY="23.0" mnemonicParsing="false" onAction="#returnToMenu" text="Return To main Menu" />
+      <Button fx:id="returnBtn" layoutX="97.0" layoutY="23.0" mnemonicParsing="false" onAction="#returnToMenu" text="Return To Animal List" />
       <GridPane layoutX="20.0" layoutY="105.0" prefHeight="101.0" prefWidth="286.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="138.0" minWidth="10.0" prefWidth="111.0" />
