--- a/src/employeedashboard/EmployeeDashboard.fxml
+++ b/src/employeedashboard/EmployeeDashboard.fxml
@@ -14,10 +14,8 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-  prefHeight="450.0" prefWidth="600.0" stylesheets="@../mainCSS.css" tabClosingPolicy="UNAVAILABLE"
-  xmlns="http://javafx.com/javafx/8.0.201" xmlns:fx="http://javafx.com/fxml/1"
-  fx:controller="employeedashboard.EmployeeDashboardController">
+
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="600.0" stylesheets="@../mainCSS.css" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="employeedashboard.EmployeeDashboardController">
   <tabs>
     <Tab text="Main">
       <content>
@@ -52,6 +50,7 @@
                         <Font size="20.0" />
                       </font>
                     </Button>
+                              <Button fx:id="logOutBtn" layoutX="525.0" layoutY="14.0" mnemonicParsing="false" onAction="#logOut" text="Log Out" />
                   </children>
                 </AnchorPane>
               </items>
@@ -111,29 +110,27 @@
                       <children>
                         <ListView fx:id="unprocessedAdoptionsList" prefWidth="200.0">
                           <VBox.margin>
-                            <Insets/>
+                            <Insets />
                           </VBox.margin>
                         </ListView>
                         <HBox alignment="CENTER_RIGHT" prefWidth="200.0">
                           <children>
-                            <Button fx:id="adoptionUnprocessedRejectBtn" mnemonicParsing="false"
-                              onAction="#rejectAdoptionRequest" text="Reject">
+                            <Button fx:id="adoptionUnprocessedRejectBtn" mnemonicParsing="false" onAction="#rejectAdoptionRequest" text="Reject">
                               <HBox.margin>
-                                <Insets right="8.0"/>
+                                <Insets right="8.0" />
                               </HBox.margin>
                             </Button>
-                            <Button fx:id="adoptionUnprocessedApproveBtn" mnemonicParsing="false"
-                              onAction="#approveAdoptionRequest" text="Approve">
+                            <Button fx:id="adoptionUnprocessedApproveBtn" mnemonicParsing="false" onAction="#approveAdoptionRequest" text="Approve">
                               <HBox.margin>
-                                <Insets/>
+                                <Insets />
                               </HBox.margin>
                             </Button>
                           </children>
                           <VBox.margin>
-                            <Insets/>
+                            <Insets />
                           </VBox.margin>
                           <padding>
-                            <Insets bottom="16.0" right="8.0" top="8.0"/>
+                            <Insets bottom="16.0" right="8.0" top="8.0" />
                           </padding>
                         </HBox>
                       </children>
@@ -144,7 +141,7 @@
                   <content>
                     <VBox prefHeight="200.0" prefWidth="100.0">
                       <children>
-                        <ListView fx:id="processedAdoptionsList" prefWidth="200.0"/>
+                        <ListView fx:id="processedAdoptionsList" prefWidth="200.0" />
                       </children>
                     </VBox>
                   </content>
