--- a/src/employeedashboard/EmployeeDashboard.fxml
+++ b/src/employeedashboard/EmployeeDashboard.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="600.0" stylesheets="@../mainCSS.css" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.201" xmlns:fx="http://javafx.com/fxml/1" fx:controller="employeedashboard.EmployeeDashboardController">
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="600.0" stylesheets="@../mainCSS.css" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="employeedashboard.EmployeeDashboardController">
   <tabs>
     <Tab text="Main">
       <content>
@@ -35,7 +35,7 @@
                 </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                   <children>
-                    <Button fx:id="viewAnimalBtn" layoutX="187.0" layoutY="70.0" mnemonicParsing="false" onAction="#goToAnimalScreen" prefHeight="48.0" prefWidth="225.0" text="View Animals">
+                    <Button fx:id="viewAnimalBtn" layoutX="187.0" layoutY="70.0" mnemonicParsing="false" onAction="#goToAnimalScreen" prefHeight="45.0" prefWidth="227.0" text="View Animals">
                       <font>
                         <Font size="20.0" />
                       </font>
@@ -50,7 +50,7 @@
                         <Font size="20.0" />
                       </font>
                     </Button>
-                              <Button fx:id="logOutBtn" layoutX="525.0" layoutY="14.0" mnemonicParsing="false" onAction="#logOut" text="Log Out" />
+                              <Button fx:id="logOutBtn" layoutX="498.0" layoutY="14.0" mnemonicParsing="false" onAction="#logOut" text="Log Out" />
                   </children>
                 </AnchorPane>
               </items>
@@ -70,8 +70,8 @@
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                       <children>
                         <ListView fx:id="unanwQuestionList" layoutX="16.0" layoutY="37.0" prefHeight="274.0" prefWidth="569.0" />
-                        <TextField fx:id="answerQuestionTxtBox" alignment="TOP_LEFT" layoutX="16.0" layoutY="323.0" prefHeight="58.0" prefWidth="408.0" promptText="Answer questions here" />
-                        <Button fx:id="answerBtn" layoutX="469.0" layoutY="334.0" mnemonicParsing="false" onAction="#answerQuestion" prefHeight="37.0" prefWidth="61.0" text="Answer" />
+                        <TextField fx:id="answerQuestionTxtBox" alignment="TOP_LEFT" layoutX="17.0" layoutY="323.0" prefHeight="38.0" prefWidth="407.0" promptText="Type response here" />
+                        <Button fx:id="answerBtn" layoutX="463.0" layoutY="324.0" mnemonicParsing="false" onAction="#answerQuestion" prefHeight="37.0" prefWidth="100.0" text="Answer" />
                         <Label layoutX="197.0" layoutY="5.0" text="Unanswered Questions">
                           <font>
                             <Font size="18.0" />
