--- a/src/animalList/AnimalList.fxml
+++ b/src/animalList/AnimalList.fxml
@@ -9,26 +9,32 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.201" xmlns:fx="http://javafx.com/fxml/1" fx:controller="animalList.AnimalListController">
-   <children>
-      <TextField layoutX="27.0" layoutY="25.0" promptText="Search..." />
-      <Button layoutX="224.0" layoutY="25.0" mnemonicParsing="false" text="Go" />
-      <ChoiceBox layoutX="94.0" layoutY="81.0" prefWidth="150.0" />
-      <Label layoutX="27.0" layoutY="86.0" text="Filter By:" />
-      <Button layoutX="264.0" layoutY="81.0" mnemonicParsing="false" text="Apply Filter" />
-      <Pane layoutX="30.0" layoutY="128.0" prefHeight="217.0" prefWidth="541.0">
-         <children>
-            <TableView fx:id="animalsTableView" layoutX="17.0" layoutY="14.0" onMouseClicked="#selectAnimal" prefHeight="200.0" prefWidth="508.0">
-              <columns>
-                <TableColumn fx:id="nameColumn" prefWidth="161.0" text="Name" />
-                <TableColumn fx:id="speciesColumn" minWidth="0.0" prefWidth="182.0" text="Species" />
-                  <TableColumn fx:id="breedColumn" minWidth="0.0" prefWidth="163.0" text="Breed" />
-              </columns>
-            </TableView>
-         </children>
-      </Pane>
-      <Button fx:id="returnToMain" layoutX="341.0" layoutY="25.0" mnemonicParsing="false" onAction="#goToMainMenu" text="Return to Main Menu" />
-      <Button fx:id="selectedAnimalButton" layoutX="356.0" layoutY="353.0" mnemonicParsing="false" onAction="#goToAnimalProfile" text="Go to Selected Animal's Page" />
-      <Button fx:id="editAnimalButton" layoutX="68.0" layoutY="353.0" mnemonicParsing="false" onAction="#createAnimal" text="Create an Animal Profile" />
-   </children>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+  prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.201"
+  xmlns:fx="http://javafx.com/fxml/1" fx:controller="animalList.AnimalListController">
+  <children>
+    <TextField layoutX="27.0" layoutY="25.0" promptText="Search..."/>
+    <Button layoutX="224.0" layoutY="25.0" mnemonicParsing="false" text="Go"/>
+    <ChoiceBox layoutX="94.0" layoutY="81.0" prefWidth="150.0"/>
+    <Label layoutX="27.0" layoutY="86.0" text="Filter By:"/>
+    <Button layoutX="264.0" layoutY="81.0" mnemonicParsing="false" text="Apply Filter"/>
+    <Pane layoutX="30.0" layoutY="128.0" prefHeight="217.0" prefWidth="541.0">
+      <children>
+        <TableView fx:id="animalsTableView" layoutX="17.0" layoutY="14.0"
+          onMouseClicked="#selectAnimal" prefHeight="200.0" prefWidth="508.0">
+          <columns>
+            <TableColumn fx:id="nameColumn" prefWidth="161.0" text="Name"/>
+            <TableColumn fx:id="speciesColumn" minWidth="0.0" prefWidth="182.0" text="Species"/>
+            <TableColumn fx:id="breedColumn" minWidth="0.0" prefWidth="163.0" text="Breed"/>
+          </columns>
+        </TableView>
+      </children>
+    </Pane>
+    <Button fx:id="returnToMain" layoutX="341.0" layoutY="25.0" mnemonicParsing="false"
+      onAction="#goToMainMenu" text="Return to Main Menu"/>
+    <Button fx:id="selectedAnimalButton" layoutX="356.0" layoutY="353.0" mnemonicParsing="false"
+      onAction="#goToAnimalProfile" text="Go to Selected Animal's Page"/>
+    <Button fx:id="editAnimalButton" layoutX="68.0" layoutY="353.0" mnemonicParsing="false"
+      onAction="#createAnimal" text="Create an Animal Profile"/>
+  </children>
 </AnchorPane>
