--- a/src/adoptionPage/AdoptionPage.fxml
+++ b/src/adoptionPage/AdoptionPage.fxml
@@ -9,133 +9,118 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="429.0" prefWidth="326.0" xmlns="http://javafx.com/javafx/8.0.201"
-  xmlns:fx="http://javafx.com/fxml/1" fx:controller="adoptionPage.AdoptionPageController">
+<AnchorPane prefHeight="452.0" prefWidth="352.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="adoptionPage.AdoptionPageController">
   <children>
-    <Button fx:id="returnBtn" layoutX="97.0" layoutY="23.0" mnemonicParsing="false"
-      onAction="#returnToMenu" text="Return To Animal List"/>
-    <GridPane layoutX="20.0" layoutY="105.0" prefHeight="101.0" prefWidth="286.0">
+    <Button fx:id="returnBtn" layoutX="48.0" layoutY="401.0" mnemonicParsing="false" onAction="#returnToMenu" text="Go Back" />
+    <GridPane layoutX="42.0" layoutY="120.0" prefHeight="97.0" prefWidth="330.0">
       <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="138.0" minWidth="10.0" prefWidth="111.0"/>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="175.0" minWidth="10.0" prefWidth="175.0"/>
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="138.0" minWidth="10.0" prefWidth="111.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="175.0" minWidth="10.0" prefWidth="175.0" />
       </columnConstraints>
       <rowConstraints>
-        <RowConstraints maxHeight="39.0" minHeight="10.0" prefHeight="33.0" vgrow="SOMETIMES"/>
-        <RowConstraints maxHeight="35.0" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES"/>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+        <RowConstraints maxHeight="39.0" minHeight="10.0" prefHeight="33.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="35.0" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       </rowConstraints>
       <children>
         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Name:" GridPane.halignment="RIGHT">
           <font>
-            <Font name="Times New Roman Bold" size="16.0"/>
+            <Font name="Arial Bold" size="16.0" />
           </font>
         </Text>
-        <Text fx:id="animNameText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text"
-          GridPane.columnIndex="1">
+        <Text fx:id="animNameText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="1">
           <GridPane.margin>
-            <Insets left="10.0"/>
+            <Insets left="10.0" />
           </GridPane.margin>
           <font>
-            <Font size="16.0"/>
+            <Font size="16.0" />
           </font>
         </Text>
-        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Breed:" GridPane.halignment="RIGHT"
-          GridPane.rowIndex="2">
+        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Breed:" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
           <font>
-            <Font name="Times New Roman Bold" size="16.0"/>
+            <Font name="Arial Bold" size="16.0" />
           </font>
         </Text>
-        <Text fx:id="animSpeciesText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text"
-          GridPane.columnIndex="1" GridPane.rowIndex="1">
+        <Text fx:id="animSpeciesText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="1" GridPane.rowIndex="1">
           <GridPane.margin>
-            <Insets left="10.0"/>
+            <Insets left="10.0" />
           </GridPane.margin>
+               <font>
+                  <Font size="16.0" />
+               </font>
+        </Text>
+        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Species:" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
           <font>
-            <Font name="Times New Roman" size="16.0"/>
+            <Font name="Arial Bold" size="16.0" />
           </font>
         </Text>
-        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Species:" GridPane.halignment="RIGHT"
-          GridPane.rowIndex="1">
-          <font>
-            <Font name="Times New Roman Bold" size="16.0"/>
-          </font>
-        </Text>
-        <Text fx:id="animBreedText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text"
-          GridPane.columnIndex="1" GridPane.rowIndex="2">
+        <Text fx:id="animBreedText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="1" GridPane.rowIndex="2">
           <GridPane.margin>
-            <Insets left="10.0"/>
+            <Insets left="10.0" />
           </GridPane.margin>
-          <font>
-            <Font name="Times New Roman" size="16.0"/>
-          </font>
+               <font>
+                  <Font size="16.0" />
+               </font>
         </Text>
       </children>
     </GridPane>
-    <Text layoutX="38.0" layoutY="82.0" strokeType="OUTSIDE" strokeWidth="0.0"
-      text="Adopt your new friend!" textAlignment="CENTER" wrappingWidth="250.13671875">
+    <Text layoutX="49.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Adopt your new friend!" textAlignment="CENTER" wrappingWidth="273.13671875">
       <font>
-        <Font name="Times New Roman Bold" size="20.0"/>
+        <Font name="Ink Free" size="26.0" />
       </font>
     </Text>
-    <GridPane layoutX="21.0" layoutY="255.0" prefHeight="101.0" prefWidth="286.0">
+    <GridPane layoutX="107.0" layoutY="255.0" prefHeight="91.0" prefWidth="233.0">
       <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="138.0" minWidth="10.0" prefWidth="111.0"/>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="175.0" minWidth="10.0" prefWidth="175.0"/>
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="138.0" minWidth="10.0" prefWidth="111.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="175.0" minWidth="10.0" prefWidth="175.0" />
       </columnConstraints>
       <rowConstraints>
-        <RowConstraints maxHeight="39.0" minHeight="10.0" prefHeight="33.0" vgrow="SOMETIMES"/>
-        <RowConstraints maxHeight="35.0" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES"/>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+        <RowConstraints maxHeight="39.0" minHeight="10.0" prefHeight="33.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="35.0" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       </rowConstraints>
       <children>
-        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="First Name :"
-          GridPane.halignment="RIGHT">
+        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="First Name :" GridPane.halignment="RIGHT">
           <font>
-            <Font name="Times New Roman Bold" size="16.0"/>
+            <Font name="Arial Bold" size="16.0" />
           </font>
         </Text>
-        <Text fx:id="userFirstNameText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text"
-          GridPane.columnIndex="1">
+        <Text fx:id="userFirstNameText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="1">
           <GridPane.margin>
-            <Insets left="10.0"/>
+            <Insets left="10.0" />
           </GridPane.margin>
           <font>
-            <Font size="16.0"/>
+            <Font size="16.0" />
           </font>
         </Text>
-        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Date of Birth :"
-          GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Date of Birth :" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
           <font>
-            <Font name="Times New Roman Bold" size="16.0"/>
+            <Font name="Arial Bold" size="16.0" />
           </font>
         </Text>
-        <Text fx:id="userLastNameText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text"
-          GridPane.columnIndex="1" GridPane.rowIndex="1">
+        <Text fx:id="userLastNameText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="1" GridPane.rowIndex="1">
           <GridPane.margin>
-            <Insets left="10.0"/>
+            <Insets left="10.0" />
+          </GridPane.margin>
+               <font>
+                  <Font size="16.0" />
+               </font>
+        </Text>
+        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Last Name :" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+          <font>
+            <Font name="Arial Bold" size="16.0" />
+          </font>
+        </Text>
+        <Text fx:id="userDOBText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="1" GridPane.rowIndex="2">
+          <GridPane.margin>
+            <Insets left="10.0" />
           </GridPane.margin>
           <font>
-            <Font name="Times New Roman" size="16.0"/>
-          </font>
-        </Text>
-        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Last Name :" GridPane.halignment="RIGHT"
-          GridPane.rowIndex="1">
-          <font>
-            <Font name="Times New Roman Bold" size="16.0"/>
-          </font>
-        </Text>
-        <Text fx:id="userDOBText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text"
-          GridPane.columnIndex="1" GridPane.rowIndex="2">
-          <GridPane.margin>
-            <Insets left="10.0"/>
-          </GridPane.margin>
-          <font>
-            <Font size="16.0"/>
+            <Font size="16.0" />
           </font>
         </Text>
       </children>
     </GridPane>
-    <Button fx:id="adoptAnimalBtn" layoutX="137.0" layoutY="385.0" mnemonicParsing="false"
-      onAction="#adoptAnimal" text="Adopt!"/>
+    <Button fx:id="adoptAnimalBtn" layoutX="245.0" layoutY="401.0" mnemonicParsing="false" onAction="#adoptAnimal" text="Adopt!" />
   </children>
 </AnchorPane>
