--- a/src/adoptionConfirmationPage/confirmPage.fxml
+++ b/src/adoptionConfirmationPage/confirmPage.fxml
@@ -1,25 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171"
-  xmlns:fx="http://javafx.com/fxml/1" fx:controller="adoptionConfirmationPage.ConfirmPage">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="adoptionConfirmationPage.ConfirmPage">
   <children>
     <AnchorPane layoutX="-1.0" prefHeight="403.0" prefWidth="600.0">
       <children>
-        <Button fx:id="btnReturntoList" layoutX="402.0" layoutY="102.0" mnemonicParsing="false"
-          onAction="#goToAnimalList" text="Return to Animal List"/>
-        <Button fx:id="btnReturntoMain" layoutX="398.0" layoutY="153.0" mnemonicParsing="false"
-          onAction="#goToMain" text="Return to Main Screen"/>
-        <Button fx:id="btnLogOff" layoutX="448.0" layoutY="202.0" mnemonicParsing="false"
-          onAction="#LogUserOut" text="Log off"/>
-        <TextArea fx:id="txtfieldThanks" layoutX="100.0" layoutY="69.0" prefHeight="144.0"
-          prefWidth="200.0"
-          text="Thank you for applying to adopt our wonderful friend! We will look through your application to ensure that your home is right for them!"
-          wrapText="true"/>
+        <Button fx:id="btnReturntoList" layoutX="69.0" layoutY="314.0" mnemonicParsing="false" onAction="#goToAnimalList" text="Return to Animal List" />
+        <Button fx:id="btnReturntoMain" layoutX="371.0" layoutY="314.0" mnemonicParsing="false" onAction="#goToMain" text="Return to Main Screen" />
+        <Button fx:id="btnLogOff" layoutX="505.0" layoutY="29.0" mnemonicParsing="false" onAction="#LogUserOut" text="Log off" />
+        <TextArea fx:id="txtfieldThanks" layoutX="69.0" layoutY="179.0" prefHeight="85.0" prefWidth="462.0" text="Thank you for applying to adopt our wonderful friend! We will look through your application soon to ensure that your home is right for them! " wrapText="true" />
+            <Label layoutX="224.0" layoutY="98.0" text="Thank you!">
+               <font>
+                  <Font name="Ink Free" size="32.0" />
+               </font>
+            </Label>
       </children>
     </AnchorPane>
   </children>
